--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,12 +7,15 @@
     <title>Esercizio js</title>
 </head>
 <body>
+    <form action="js/script.js">
+        <input type="text" placeholder="Dimmi il tuo nome" id="name">
+        <input type="text" placeholder="Dimmi il tuo cognome" id="surname">
+        <input type="text" placeholder="Dimmi il tuo colore preferito" id="favoritecolor">
+        <button type="submit"> submit</button>
+    </form>
     <div id="generatore-password">
 
     </div>
-    <input type="text" placeholder="Dimmi il tuo nome">
-    <input type="text" placeholder="Dimmi il tuo cognome">
-    <input type="text" placeholder="Dimmi il tuo colore preferito">
     <!-- link relativo js -->
     <script type="text/javascript" src="js/script.js"></script>
 </body>
