--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,11 +7,11 @@
     <title>Esercizio js</title>
 </head>
 <body>
-    <form action="js/script.js">
-        <input type="text" placeholder="Dimmi il tuo nome" id="name">
-        <input type="text" placeholder="Dimmi il tuo cognome" id="surname">
-        <input type="text" placeholder="Dimmi il tuo colore preferito" id="favoritecolor">
-        <button type="submit"> submit</button>
+    <form action="js/script.js" id="signup-form">
+        <input type="text" placeholder="Dimmi il tuo nome" name="name">
+        <input type="text" placeholder="Dimmi il tuo cognome" name="surname">
+        <input type="text" placeholder="Dimmi il tuo colore preferito" name="favoritecolor">
+        <button type="button" id="button"> submit</button>
     </form>
     <div id="generatore-password">
 
